# cesium

./: .clangd  .cspell.jsonc  .gitignore  .gitmodules  .markdownlint.jsonc  CMakeLists.txt  CMakePresets.json  build.zig  build.zig.zon  cesium-doc-config.json  cesium-doc-config.jsonc  cesium.code-workspace  readme.md  test_operator_parse.cpp
.github/workflows/: ci.yml
cesium/: CMakeLists.txt
cesium/gui/: CMakeLists.txt
cesium/include/: CMakeLists.txt  ast_extractor.h  cli_utils.h  debug_utils.h  doc_cli.h  docgen.h  dynlib.h  javadoc.h  json.h  logging.h  markdowngen.h  treesitter.h  ts_ast_parser.h  utils.h  version.h.in  win32.h
cesium/include/doc/: cache.h  doc_cli.h  docgen.h  markdowngen.h  treesitter.h
cesium/include/doc/cpp/: ast_extractor.h  docstrings.h  ts_ast_parser.h
cesium/src/: CMakeLists.txt  ast_extractor.cpp  cli_utils.cpp  debug_utils.cpp  doc_cli.cpp  docgen.cpp  dynlib.cpp  javadoc.cpp  json.cpp  logging.cpp  main.cpp  markdowngen.cpp  treesitter.cpp  ts_ast_parser.cpp  utils.cpp  win32.cpp
cesium/tests/: CMakeLists.txt  test_cli_integration.cpp  test_docstring_parser.cpp  test_javadoc_parser.cpp  test_json_config.cpp  test_markdown_generator.cpp  test_operator_extraction.cpp
cmake/: ConfigFetchContent.cmake  DefaultInstallPath.cmake  ExeTgtDefaults.cmake  ForceUnicode.cmake  QtExeTgt.cmake  qt.cmake  tree-sitter-core.cmake  tree-sitter-cpp.cmake  utf8.cmake  yyjson.cmake
include/: CMakeLists.txt
include/backend/core/: cli_utils.h  dynlib.h  json.h  logging.h  utils.h  win32.h
include/backend/doc/: cache.h  config.h  doc_cli.h  docgen.h  markdowngen.h  treesitter.h
include/backend/doc/cpp/: ast_extractor.h  docstrings.h  ts_ast_parser.h
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/core/: CMakeLists.txt  cli_utils.cpp  debug.cpp  dynlib.cpp  json.cpp  logging.cpp  utils.cpp  win32.cpp
src/backend/doc/: CMakeLists.txt  cache.cpp  config.cpp  doc_cli.cpp  docgen.cpp  markdowngen.cpp  treesitter.cpp
src/backend/doc/cpp/: CMakeLists.txt  ast_extractor.cpp  docstrings.cpp  ts_ast_parser.cpp
src/cesium/: CMakeLists.txt
src/exe/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  gui.cpp
src/tests/: CMakeLists.txt  main.cpp
src/tests/cases/: CMakeLists.txt  cases.h  test_cli_integration.cpp  test_docstring_parser.cpp  test_dynlib_platform.cpp  test_json_config.cpp  test_markdown_generator.cpp  test_operator_extraction.cpp
src/tests/testfrmwk/: CMakeLists.txt  simple_test.cpp  simple_test.h  test_runner.cpp
tests/: CMakeLists.txt  simple_test.cpp  simple_test.h  test_runner.cpp
